--- a/kube/templates/serviceaccount.yaml
+++ b/kube/templates/serviceaccount.yaml
@@ -4,8 +4,7 @@ kind: ServiceAccount
 metadata:
   name: {{ include "finalproject.serviceAccountName" . }}
   labels:
-    {{- include "finalproject.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
+    app: finalproject
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
