--- a/kube/templates/configmap.yaml
+++ b/kube/templates/configmap.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: finalenv
+labels:
+  app: finalproject
 data:
   INTERVAL: "500"
   ID: AKIA3LTSIWSZXTJUUYWF
