--- a/kube/templates/deployment.yaml
+++ b/kube/templates/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "finalproject.selectorLabels" . | nindent 8 }}
+        app: finalproject
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
