--- a/kube/templates/hpa.yaml
+++ b/kube/templates/hpa.yaml
@@ -4,7 +4,7 @@ kind: HorizontalPodAutoscaler
 metadata:
   name: {{ include "finalproject.fullname" . }}
   labels:
-    {{- include "finalproject.labels" . | nindent 4 }}
+    app: finalproject
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
