--- a/kube/templates/deployment.yaml
+++ b/kube/templates/deployment.yaml
@@ -8,6 +8,7 @@ spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
+selector:
   template:
     metadata:
       {{- with .Values.podAnnotations }}
