--- a/kube/templates/deployment.yaml
+++ b/kube/templates/deployment.yaml
@@ -9,6 +9,8 @@ spec:
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
+    matchLabels:
+      app: finalproject
   template:
     metadata:
       {{- with .Values.podAnnotations }}
